--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,11 @@
-backend/requirements.txt
 fastapi[all]
 uvicorn[standard]
-
-For password hashing
 passlib[bcrypt]
-
-For JWT creation and validation
 python-jose[cryptography]
-
-For managing environment variables
 pydantic-settings
-
-For MongoDB interaction
 pymongo
-
-For Google Gemini AI
+openai
 google-generativeai
+cohere
+anthropic
+redis
