updated code upto task management

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,31 @@
+backend/requirements.txt
 fastapi[all]
 uvicorn[standard]
+
+For password hashing
 passlib[bcrypt]
+
+For JWT creation and validation
 python-jose[cryptography]
+
+For managing environment variables
 pydantic-settings
+
+For MongoDB interaction
 pymongo
+
+--- AI Model Libraries ---
 openai
 google-generativeai
 cohere
 anthropic
+
+For Redis (short-term memory & Celery broker)
 redis
+
+For Asynchronous Task Queue
+celery
+flower
+
+For Robust Date Parsing
+dateparser
